feat: add purchase management features with PurchaseEntity, PurchaseRequestDTO, and PurchaseResponseDTO; implement soft delete for users